crates/swc_ecma_transforms/react/tests/jsx/fixture/react-automatic/.should-add-quotes-es3/output.stderr
error: Expected ,, got :
 --> output.js:8:12
  |
8 |     foo-bar: true
  |            ^

error: Expression expected
 --> output.js:8:8
  |
8 |     foo-bar: true
  |        ^

